<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>localization_stack</name>
  <version>0.1.0</version>
  <description>
    Localization stack for Lunabotics autonomy.
    Layer 1: Point-LIO simulator (map → odom TF).
    Layer 2: robot_localization EKF (odom → base_link TF).
    Layer 3: UWB correction stub (periodic absolute position fix).
  </description>
  <maintainer email="arnavm@purdue.edu">arnavm</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>robot_bringup</exec_depend>
  <exec_depend>hazard_detection</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
